--- a/slides/w1_intro.Rmd
+++ b/slides/w1_intro.Rmd
@@ -167,7 +167,7 @@ Like these!
 .pull-left[
 [**For a project**](https://jnese.github.io/coreprosody/)
 
-```{r out.height = '50%'}
+```{r, out.height='50%'}
 knitr::include_graphics("images/coreprosody.png")
 ```
 ]
@@ -175,7 +175,7 @@ knitr::include_graphics("images/coreprosody.png")
 .pull-right[
 [**For this class**](https://uo-datasci-specialization.github.io/c1-intro-fall-2021/)
 
-```{r out.height = '50%'}
+```{r, out.height='50%'}
 knitr::include_graphics("images/edld651home.png")
 ```
 ]
@@ -185,7 +185,7 @@ knitr::include_graphics("images/edld651home.png")
 
 ### with `{flexdashboard}`!
 
-```{r out.width = '100%'}
+```{r, out.width='100%'}
 knitr::include_graphics("images/dashboard-ex.png")
 ```
 
@@ -195,7 +195,7 @@ knitr::include_graphics("images/dashboard-ex.png")
 
 ### with `{shiny}`
 
-```{r out.width = '100%'}
+```{r, out.width='100%'}
 knitr::include_graphics("images/shiny-ex.png")
 ```
 
@@ -205,7 +205,7 @@ knitr::include_graphics("images/shiny-ex.png")
 
 ### with `{posterdown}`!
 
-```{r out.width = '100%'}
+```{r, out.width='100%'}
 knitr::include_graphics("images/poster_ex.png")
 ```
 
@@ -263,7 +263,7 @@ This course, and much of the materials prepared and content presented, was origi
 
 --
 
-```{r out.width = '50%', fig.align='center'}
+```{r, out.width = '50%', fig.align='center'}
 knitr::include_graphics("https://media2.giphy.com/media/OcZp0maz6ALok/giphy.gif?cid=ecf05e47nmgpnfbcocno4uyal5vpv1orgvnyw028hqgsisak&rid=giphy.gif&ct=g")
 ```
 
@@ -333,7 +333,7 @@ knitr::include_graphics("images/feynman_trying.png")
 
 --
 
-```{r out.width = '100%'}
+```{r, out.width='100%'}
 knitr::include_graphics("images/problemsolved.gif")
 ```
 
@@ -470,14 +470,14 @@ https://happygitwithr.com/
 
 .pull-left[
 [https://clauswilke.com/dataviz/](https://clauswilke.com/dataviz/)
-```{r out.width = '80%'}
+```{r, out.width = '80%'}
 knitr::include_graphics("https://clauswilke.com/dataviz/cover.png") 
 ```
 ]
 
 .pull-right[
 [https://socviz.co/](https://socviz.co/)
-```{r out.width = '80%'}
+```{r, out.width = '80%'}
 knitr::include_graphics("https://socviz.co/assets/dv-cover-pupress.jpg") 
 ```
 ]
