--- a/docs/slides/w1_intro.Rmd
+++ b/docs/slides/w1_intro.Rmd
@@ -15,7 +15,9 @@ output:
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 
-knitr::opts_chunk$set(echo = FALSE,
+knitr::opts_chunk$set(fig.width=9, fig.height=3.5, fig.retina=3,
+                      out.width = "100%",
+                      echo = FALSE,
                       message = FALSE,
                       warning = FALSE)
 
@@ -129,7 +131,7 @@ Please introduce yourself
 * Do you have any `R` experience?
 * Tell me whatever you’d like me and the class to know (e.g., pronouns, circumstances)
 * How many beans are in the jar?
-  + No changing your answer! *academic integrity!*
+  + No changing your answer! *Academic integrity!*
 
 ---
 background-color: #CC79A7
@@ -167,7 +169,8 @@ Like these!
 .pull-left[
 [**For a project**](https://jnese.github.io/coreprosody/)
 
-```{r out.height = '50%'}
+![](./images/coreprosody.png)
+```{r, eval=FALSE}
 knitr::include_graphics("images/coreprosody.png")
 ```
 ]
@@ -175,7 +178,7 @@ knitr::include_graphics("images/coreprosody.png")
 .pull-right[
 [**For this class**](https://uo-datasci-specialization.github.io/c1-intro-fall-2021/)
 
-```{r out.height = '50%'}
+```{r}
 knitr::include_graphics("images/edld651home.png")
 ```
 ]
@@ -185,7 +188,7 @@ knitr::include_graphics("images/edld651home.png")
 
 ### with `{flexdashboard}`!
 
-```{r out.width = '100%'}
+```{r, out.width='100%'}
 knitr::include_graphics("images/dashboard-ex.png")
 ```
 
@@ -195,7 +198,7 @@ knitr::include_graphics("images/dashboard-ex.png")
 
 ### with `{shiny}`
 
-```{r out.width = '100%'}
+```{r, out.width='100%'}
 knitr::include_graphics("images/shiny-ex.png")
 ```
 
@@ -205,7 +208,7 @@ knitr::include_graphics("images/shiny-ex.png")
 
 ### with `{posterdown}`!
 
-```{r out.width = '100%'}
+```{r, out.width='100%'}
 knitr::include_graphics("images/poster_ex.png")
 ```
 
@@ -263,7 +266,7 @@ This course, and much of the materials prepared and content presented, was origi
 
 --
 
-```{r out.width = '50%', fig.align='center'}
+```{r, out.width = '50%', fig.align='center'}
 knitr::include_graphics("https://media2.giphy.com/media/OcZp0maz6ALok/giphy.gif?cid=ecf05e47nmgpnfbcocno4uyal5vpv1orgvnyw028hqgsisak&rid=giphy.gif&ct=g")
 ```
 
@@ -333,7 +336,7 @@ knitr::include_graphics("images/feynman_trying.png")
 
 --
 
-```{r out.width = '100%'}
+```{r, out.width='100%'}
 knitr::include_graphics("images/problemsolved.gif")
 ```
 
@@ -429,7 +432,7 @@ class: inverse, left, middle
   + leverage appropriate functions for introductory data science tasks
   + prepare data using scripts and reproducible workflows
 * Use version control with `R` via git and GitHub
-* Use R Markdown to create reproducible dynamic reports, including APA manuscripts
+* Use R Markdown to create reproducible dynamic reports
 * Understand and create different types of data visualizations
 
 ---
@@ -470,14 +473,14 @@ https://happygitwithr.com/
 
 .pull-left[
 [https://clauswilke.com/dataviz/](https://clauswilke.com/dataviz/)
-```{r out.width = '80%'}
+```{r, out.width = '80%'}
 knitr::include_graphics("https://clauswilke.com/dataviz/cover.png") 
 ```
 ]
 
 .pull-right[
 [https://socviz.co/](https://socviz.co/)
-```{r out.width = '80%'}
+```{r, out.width = '80%'}
 knitr::include_graphics("https://socviz.co/assets/dv-cover-pupress.jpg") 
 ```
 ]
@@ -873,7 +876,7 @@ a
 
 # Data Types
 
-Objects can be a variety of types
+Data can be a variety of types
 
 --
 
@@ -918,10 +921,10 @@ You can then use or manipulate these in different ways
 
 # `R` Functions
 
-Anything that carries out an operation in R is a function, even `+`
+Anything that carries out an operation in `R` is a function, even `+`
 
 Functions are generally followed by `()`
-* **`package::function()`**
+* **`function()`**
   + `sum()`
   + `lm()`
   + `sqrt()`
