--- a/docs/slides/w1_intro.Rmd
+++ b/docs/slides/w1_intro.Rmd
@@ -169,7 +169,7 @@ Like these!
 .pull-left[
 [**For a project**](https://jnese.github.io/coreprosody/)
 
-![](./images/coreprosody.png)
+![](./images/coreprosody.PNG)
 ```{r, eval=FALSE}
 knitr::include_graphics("images/coreprosody.png")
 ```
